--- a/client/index.html
+++ b/client/index.html
@@ -2,69 +2,23 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Metni Seslendir</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 2rem;
-      max-width: 600px;
-      margin: auto;
-      background: #f5f5f5;
-    }
-    textarea {
-      width: 100%;
-      height: 120px;
-      font-size: 16px;
-      margin-bottom: 1rem;
-    }
-    select, button {
-      padding: 0.5rem;
-      margin-right: 1rem;
-      font-size: 16px;
-    }
-    audio {
-      margin-top: 1.5rem;
-      width: 100%;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ringo - Metni Seslendir</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="logo.svg" type="image/svg+xml">
 </head>
 <body>
-  <h2>Metni Seslendir</h2>
-
-  <textarea id="text" placeholder="Seslendirmek istediğiniz metni buraya yazın..."></textarea><br>
-
-  <label for="voice">Ses:</label>
-  <select id="voice">
-    <option value="FEMALE">Kadın</option>
-    <option value="MALE">Erkek</option>
-  </select>
-
-  <button onclick="speak()">Seslendir</button>
-  <a id="downloadBtn" class="button" download="tts.mp3" disabled>İndir</a>
-
-  <audio id="audio" controls></audio>
-
-  <script>
-    async function speak() {
-      const text = document.getElementById("text").value;
-      const voice = document.getElementById("voice").value;
-
-      const res = await fetch("/api/speak", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ text, voice }),
-      });
-
-      const blob = await res.blob();
-      const url = URL.createObjectURL(blob);
-
-      const audio = document.getElementById("audio");
-      audio.src = url;
-
-      const downloadBtn = document.getElementById("downloadBtn");
-      downloadBtn.href = url;
-      downloadBtn.disabled = false;
-    }
-  </script>
+  <div class="container">
+    <img src="logo.svg" alt="Ringo Logo" class="logo"/>
+    <h1>Ringo</h1>
+    <p class="subtitle">Yapay Zeka Destekli Metin Seslendirme Asistanı</p>
+    <textarea id="textInput" placeholder="Metninizi buraya yazın..."></textarea>
+    <div class="buttons">
+      <button onclick="speakText()">Metni Seslendir</button>
+      <button onclick="downloadAudio()">Ses Dosyasını İndir</button>
+    </div>
+    <div id="loading" class="loader hidden"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
