--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ringo - Metni Seslendir</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
-    <img src="logo.svg" alt="Ringo Logo" class="logo"/>
-    <p class="subtitle">Metin Seslendirme Asistanı</p>
-    <textarea id="textInput" placeholder="Metni buraya yazın..."></textarea>
-    <select id="voiceSelect">
-      <option value="tr-TR-Wavenet-A">Türkçe Kadın</option>
-      <option value="tr-TR-Wavenet-B">Türkçe Erkek</option>
-      <option value="en-US-Wavenet-D">İngilizce Kadın</option>
-      <option value="en-US-Wavenet-C">İngilizce Erkek</option>
+    <img src="logo-180px.png" alt="Ringo Logo" style="width: 180px; height: auto;" />
+    <h1>Metin Seslendirme Asistanı</h1>
+    <textarea id="text-input" maxlength="500" placeholder="Metni buraya yazınız..."></textarea>
+    <div class="character-count"><span id="char-count">0</span> / 500 karakter</div>
+    <select id="voice-select">
+      <option value="en-US-Wavenet-F">İngilizce Kadın</option>
+      <option value="en-US-Wavenet-D">İngilizce Erkek</option>
     </select>
-    <div id="charCount">0 karakter</div>
     <div class="buttons">
-      <button id="speakBtn" onclick="speakText()">Metni Seslendir</button>
-      <button onclick="downloadAudio()">Ses Dosyasını İndir</button>
+      <button id="speak-button" class="glow">Metni Seslendir</button>
+      <button id="download-button">Ses Dosyasını İndir</button>
     </div>
-    <audio id="audioPlayer" controls style="margin-top: 20px;"></audio>
-    <a href="https://reklamingo.com.tr" target="_blank" class="footer-button">reklamingo’ya geç</a>
-    <footer>
-      <p>Bu hizmet reklamingo! tarafından sağlanmaktadır.</p>
-    </footer>
+    <audio id="audio-player" controls style="display: none;"></audio>
+    <div class="footer-actions">
+      <a href="https://reklamingo.com.tr" target="_blank" class="go-button">reklamingo’ya geç</a>
+    </div>
+    <footer>Bu hizmet reklamingo! tarafından sağlanmaktadır.</footer>
   </div>
   <script src="script.js"></script>
 </body>
