--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ringo - Metni Seslendir</title>
+  <title>Ringo</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/png" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
-    <img src="logo-180px.png" alt="Ringo Logo" style="width: 180px; height: auto;" />
+    <img src="logo.svg" alt="Ringo Logo" style="width: 180px;" />
     <h1>Metin Seslendirme Asistanı</h1>
     <textarea id="text-input" maxlength="500" placeholder="Metni buraya yazınız..."></textarea>
-    <div class="character-count"><span id="char-count">0</span> / 500 karakter</div>
+    <div id="char-count">0 / 500 karakter</div>
     <select id="voice-select">
+      <option value="tr-TR-Wavenet-A">Türkçe Kadın</option>
+      <option value="tr-TR-Wavenet-B">Türkçe Erkek</option>
       <option value="en-US-Wavenet-F">İngilizce Kadın</option>
       <option value="en-US-Wavenet-D">İngilizce Erkek</option>
     </select>
-    <div class="buttons">
-      <button id="speak-button" class="glow">Metni Seslendir</button>
-      <button id="download-button">Ses Dosyasını İndir</button>
-    </div>
-    <audio id="audio-player" controls style="display: none;"></audio>
-    <div class="footer-actions">
-      <a href="https://reklamingo.com.tr" target="_blank" class="go-button">reklamingo’ya geç</a>
-    </div>
+    <br/>
+    <button id="speak-button" class="glow">Metni Seslendir</button>
+    <button id="download-button">Ses Dosyasını İndir</button>
+    <audio id="audio-player" controls style="display:none;"></audio>
+    <a href="https://reklamingo.com.tr" class="go-button">reklamingo’ya geç</a>
     <footer>Bu hizmet reklamingo! tarafından sağlanmaktadır.</footer>
   </div>
   <script src="script.js"></script>
