--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <br/>
     <button id="speak-button" class="glow">Metni Seslendir</button>
     <button id="download-button">Ses Dosyasını İndir</button>
-    <audio id="audio-player" controls style="display:none;"></audio>
+    <div id="audioPlayerContainer">
+  <audio id="audio-player" controls></audio>
+</div>
     <a href="https://reklamingo.com.tr" class="go-button">reklamingo’ya geç</a>
     <footer>Bu hizmet reklamingo! tarafından sağlanmaktadır.</footer>
   </div>
