--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <button id="speak-button" class="glow">Metni Seslendir</button>
     <button id="download-button">Ses Dosyasını İndir</button>
     <div id="audioPlayerContainer">
+  <div class="player-wrapper" style="display: none;">
   <audio id="audio-player" controls></audio>
 </div>
     <a href="https://reklamingo.com.tr" class="go-button">reklamingo’ya geç</a>
