--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <audio id="audio-player" controls></audio>
 </div>
     <a href="https://reklamingo.com.tr" class="go-button">reklamingo’ya geç</a>
-    <footer>Bu hizmet reklamingo! tarafından sağlanmaktadır.</footer>
+    <footer>© 2035 reklamingo!</footer>
   </div>
   <script src="script.js"></script>
 </body>
