--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <title>Ringo</title>
 <link rel='stylesheet' href='styles.css'>
-<link rel='icon' type='image/png' href='favicon.ico'>
+<link rel='icon' type='image/png' href='logo-180px.png'>
 <link href='https://fonts.googleapis.com/css2?family=Quicksand&display=swap' rel='stylesheet'>
 </head>
 <body>
