--- a/client/uygulama.html
+++ b/client/uygulama.html
@@ -1,31 +1,42 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <title>Ringo - Metin Seslendirme Asistanı</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ringo - Seslendirme Paneli</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <img src="logo.svg" alt="Ringo Logo" style="width: 180px;" />
-        <h1>Metin Seslendirme Asistanı</h1>
+        <img src="logo.svg" alt="Ringo Logo" class="logo">
+        <h1>Ringo Seslendirme Asistanı</h1>
+        <p id="credit-info">Yükleniyor...</p>
+
         <textarea id="text-input" maxlength="250" placeholder="Metninizi buraya yazın..."></textarea>
         <div id="char-count">0 / 250 karakter</div>
+
         <select id="voice-select">
-            <option value="tr-TR-Standard-A">Türkçe Kadın</option>
-            <option value="tr-TR-Standard-B">Türkçe Erkek</option>
-            <option value="en-US-Standard-F">İngilizce Kadın</option>
-            <option value="en-US-Standard-D">İngilizce Erkek</option>
+            <option value="tr-TR-Wavenet-A">Türkçe Kadın</option>
+            <option value="tr-TR-Wavenet-B">Türkçe Erkek</option>
+            <option value="en-US-Wavenet-F">İngilizce Kadın</option>
+            <option value="en-US-Wavenet-D">İngilizce Erkek</option>
         </select>
-        <br/>
+
+        <br>
         <button id="speak-button" class="glow">Metni Seslendir</button>
         <button id="download-button">Ses Dosyasını İndir</button>
+
         <div class="player-wrapper">
             <audio id="audio-player" controls style="display:none;"></audio>
         </div>
-        <a href="https://reklamingo.com.tr" class="go-button">reklamingo’ya geç</a>
-        <footer>Bu hizmet reklamingo! tarafından sağlanmaktadır.</footer>
+        <button onclick="logout()">Çıkış Yap</button>
+
+        <footer>Bu hizmet <strong>reklamingo!</strong> tarafından sağlanmaktadır.</footer>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
