--- a/client/index.html
+++ b/client/index.html
@@ -1,30 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ringo Üyelik</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <title>Ringo Giriş</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <img src="logo.svg" style="width: 180px; margin-bottom: 20px;" />
-    <h1>Ringo Üyelik Sistemi</h1>
-    
-    <h2>Kayıt Ol</h2>
-    <input type="email" id="register-email" placeholder="E-posta" />
-    <input type="password" id="register-password" placeholder="Şifre" />
-    <button onclick="register()">Kayıt Ol</button>
-
-    <h2>Giriş Yap</h2>
-    <input type="email" id="login-email" placeholder="E-posta" />
-    <input type="password" id="login-password" placeholder="Şifre" />
+  <div class="container">
+    <img src="logo.svg" class="logo" />
+    <h1>Giriş Yap</h1>
+    <input type="email" id="email" placeholder="E-posta" />
+    <input type="password" id="password" placeholder="Şifre" />
     <button onclick="login()">Giriş Yap</button>
-
-    <h2>Kod ile Kredi Yükle</h2>
-    <input type="text" id="kredi-kodu" placeholder="Yükleme Kodu" />
-    <button onclick="useCode()">Kodu Kullan</button>
-
-    <script src="script.js"></script>
+    <p>Hesabınız yok mu? <a href="#" onclick="showRegister()">Kayıt Ol</a></p>
+    <div id="register-section" style="display:none">
+      <h2>Kayıt Ol</h2>
+      <input type="email" id="regEmail" placeholder="E-posta" />
+      <input type="password" id="regPassword" placeholder="Şifre" />
+      <button onclick="register()">Kayıt Ol</button>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
