--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <title>Ringo Giriş</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div class="container">
-    <img src="logo.svg" class="logo" />
-    <h1>Giriş Yap</h1>
-    <input type="email" id="email" placeholder="E-posta" />
-    <input type="password" id="password" placeholder="Şifre" />
-    <button onclick="login()">Giriş Yap</button>
-    <p>Hesabınız yok mu? <a href="#" onclick="showRegister()">Kayıt Ol</a></p>
-    <div id="register-section" style="display:none">
-      <h2>Kayıt Ol</h2>
-      <input type="email" id="regEmail" placeholder="E-posta" />
-      <input type="password" id="regPassword" placeholder="Şifre" />
-      <button onclick="register()">Kayıt Ol</button>
-    </div>
-  </div>
-  <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Ringo</title></head><body>Uygulama Arayüzü</body></html>
