--- a/client/index.html
+++ b/client/index.html
@@ -1,34 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ringo</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" type="image/png" href="favicon.ico" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ringo Reklamingo - Giriş</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <div class="container">
-    <img src="logo.svg" alt="Ringo Logo" style="width: 180px;" />
-    <h1>Metin Seslendirme Asistanı</h1>
-    <textarea id="text-input" maxlength="250" placeholder="Metninizi buraya yazın..."></textarea>
-    <div id="char-count">0 / 250 karakter</div>
-    <select id="voice-select">
-      <option value="tr-TR-Wavenet-A">Türkçe Kadın</option>
-      <option value="tr-TR-Wavenet-B">Türkçe Erkek</option>
-      <option value="en-US-Wavenet-F">İngilizce Kadın</option>
-      <option value="en-US-Wavenet-D">İngilizce Erkek</option>
-    </select>
-    <br/>
-    <button id="speak-button" class="glow">Metni Seslendir</button>
-    <button id="download-button">Ses Dosyasını İndir</button>
-    <div class="player-wrapper">
-      <audio id="audio-player" controls style="display:none;"></audio>
-    </div>
-    <a href="https://reklamingo.com.tr" class="go-button">reklamingo’ya geç</a>
-    <footer>Bu hizmet reklamingo! tarafından sağlanmaktadır.</footer>
+    <img src="logo-180.png" alt="Logo" class="logo">
+    <h2>Giriş Yap</h2>
+    <form id="loginForm">
+      <div class="form-group">
+        <label for="email">E-posta:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Şifre:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <button type="submit">Giriş Yap</button>
+    </form>
+    <p id="error" class="error"></p>
   </div>
   <script src="script.js"></script>
 </body>
